--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   hive_generator: ^2.0.0
   image_picker: ^1.0.1
   hive_flutter: ^1.1.0
+  provider: ^6.0.5
   
 
 dev_dependencies:
